syntax = "proto3";
package entangle.distributorsauth;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
// import "cosmos_proto/cosmos.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/Entangle-Protocol/entangle-blockchain/x/distributorsauth/types";

// Msg defines the Msg service.
service Msg {
  // AddDistributor method
  rpc AddDistributor(MsgAddDistributor) returns (MsgAddDistributorResponse) {
    option (google.api.http).post = "/entangle/distributor/add";
  };
  // RemoveDistributor method
  rpc RemoveDistributor(MsgRemoveDistributor) returns (MsgRemoveDistributorResponse) {
    option (google.api.http).post = "/entangle/distributor/remove";
  };
  // AddAdmin method
  rpc AddAdmin(MsgAddAdmin) returns (MsgAddAdminResponse) {
    option (google.api.http).post = "/entangle/admin/add";
  };
  // RemoveAdmin method
  rpc RemoveAdmin(MsgRemoveAdmin) returns (MsgRemoveAdminResponse) {
    option (google.api.http).post = "/entangle/admin/remove";
  };
}

// MsgAddDistributor defines a AddDistributor message
message MsgAddDistributor {
  // sender of the message
  string sender = 1;
  // distributor_address is the address of the distributor account.
  string distributor_address = 2;
  // end_date is the date when the distributor account will be removed.
  uint64 end_date = 3;

  // this line is used by starport scaffolding # proto/tx/message
}

// MsgAddDistributorResponse defines the MsgAddDistributor response type.
message MsgAddDistributorResponse {}

// MsgRemoveDistributor defines a RemoveDistributor message
message MsgRemoveDistributor {
  // sender of the message
  string sender = 1;
  // distributor_address is the address of the distributor account.
  string distributor_address = 2;
  // this line is used by starport scaffolding # proto/tx/message
}

// MsgRemoveDistributorResponse defines the MsgRemoveDistributor response type.
message MsgRemoveDistributorResponse {}

// MsgAddAdmin defines a AddAdmin message
message MsgAddAdmin {
  // sender of the message
  string sender = 1;
  // admin_address is the address of the admin account.
  string admin_address = 2;
  // edit_option is the option to edit the admin account.
  bool edit_option = 3;
}

// MsgAddAdminResponse defines the MsgAddAdmin response type.
message MsgAddAdminResponse {}

// MsgRemoveAdmin defines a RemoveAdmin message
message MsgRemoveAdmin {
  // sender of the message
  string sender = 1;
  // admin_address is the address of the admin account.
  string admin_address = 2;
}

// MsgRemoveAdminResponse defines the MsgRemoveAdmin response type.
message MsgRemoveAdminResponse {}
